Fix dark mode row hover styling. Sacrifice light mode hover styling in correction.

--- a/ng-resume-app/src/app/views/users/users-view.component.scss
+++ b/ng-resume-app/src/app/views/users/users-view.component.scss
@@ -74,6 +74,18 @@ table {
     }
 }
 
+/*
+.darkMode {
+    
+    tr.user-row:not(.expanded-row):hover {
+        background: map.get(themes.$ng-resume-dark-primary, 700);
+    }
+
+    tr.user-row:not(.expanded-row):active {
+        background: map.get(themes.$ng-resume-dark-primary, 900);
+    }
+}
+
 tr.user-row:not(.expanded-row):hover {
     background: whitesmoke;
 }
@@ -81,11 +93,4 @@ tr.user-row:not(.expanded-row):hover {
 tr.user-row:not(.expanded-row):active {
     background: #efefef;
 }
-
-.darkMode tr.user-row:not(.expanded-row):hover {
-    background: map.get(themes.$ng-resume-dark-primary, 700);
-}
-
-.darkMode tr.user-row:not(.expanded-row):active {
-    background: map.get(themes.$ng-resume-dark-primary, 900);
-}
+*/
